--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<body onload="init()">
 		<div id="main">
 		
-			<div id="spacepeopleContainer">
+			<div>
 
 				<h2>Class in Session!</h2>
 				<h1>Web Lab</h1>
