Adding class header

--- a/index.html
+++ b/index.html
@@ -82,11 +82,7 @@
 			p{
 				font-size: 16px;
 			}
-			img {
-				vertical-align: top;
-				width: 50px;
-				height: 50px;
-			}
+			
 
 			td {
 				padding-right:20px;
@@ -104,16 +100,8 @@
 	<body onload="init()">
 		<div id="main">
 		
-			<div id="container">
-				<table>
-					<tr>
-						<td>
-				<h2>Class in Session!</h2>
-				<h1>Web Lab</h1>
-				<h3>3-4:50</h3>
-					</td>
-					</tr>
-				</table>
+			<div>
+				<img src="class.jpg">
 			</div><!-- spacepeopleContainer -->
 
 		</div><!-- main -->
