--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
 				font-family: "Roadgeek2005SeriesD";
 				src: url("http://panic.com/fonts/Roadgeek 2005 Series D/Roadgeek 2005 Series D.otf");
 			}
+			body {
+				
+				color:white;}
+			h3,h4,h5 {
+				font-family: "Roadgeek2005SeriesD",Arial,sans-serif;
+			}
 			
-			
-			
+			td {
+				
+			padding-left:15px;
+			padding-bottom:15px;
+			padding-right:15px;}
 		</style>
 	
 		
@@ -25,15 +34,18 @@
 					<table style="width:762px; height:250px;">
 						<tr>
 						  <td style="width:500px; background:rgb(0,108,230);">
-						  		<p><strong>CLASS IN SESSION</strong></p>
-						  		<hr align="left" style="width:300px;">
-						  		<p><strong>DESN468:</strong> Web Lab</p>
-						  		<br>
-						  		<p><strong>3-4:50 p.m.</strong></p>
+						  		<p><strong><h3 style="font-size:2em;">CLASS IN SESSION</h3></strong>
+						  		<hr align="left" style="width:350px; margin-top:-20px; margin-bottom:50px;">
+						  		<h4 style="font-size:2em;"><strong>DESN468:</strong> Web Lab</h4><h5><strong style="font-size:2em;">3-4:50 p.m.</strong></h5></p>
 
 
 						  </td>
-						  <td style="width:262px; background:rgb(100,112,118);">Jackson</td> 
+						  <td style="width:262px; background:rgb(100,112,118);"><p>
+                          <hr align="left" style="width:262px; margin-top:-20px;">
+                          <strong><h3 style="font-size:1em; margin-top:-15px;"align="center">Instructor</h3></strong>
+						  		<hr align="left" style="width:262px; margin-top:-20px; margin-bottom:50px;">
+						  		<h4 style="font-size:1.5em;"><strong>
+                                P. Colin Manikoth</strong></h4<h5><strong style="font-size:1.5em;">Office Hours:</strong></h5><h5 style="font-size:1.25em;">M-Th / 11-12 p.m.</h5></p></td> 
 						</tr>
 					</table>
 			
